# AlphaSimR

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  NAMESPACE  NEWS  NEWS.md  README.md  _pkgdown.yml  alphasimr.Rproj  authors.html  authors.md  cleanup  configure  configure.ac  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: AlphaSimR.R  AlphaSuite.R  Class-HybridPop.R  Class-InitialHaplo.R  Class-LociMap.R  Class-Pedigree.R  Class-Pop.R  Class-RRsol.R  Class-SelIndex.R  Class-SimParam.R  GS.R  Matings.R  OCS.R  RcppExports.R  SavedData.R  Traits.R  altAddTraitAD.R  calcPopG.R  createSimulation.R  crossing.R  founderPop.R  haplotypeTracking.R  hybrids.R  importData.R  mergePops.R  misc.R  pedigree.R  phenotypes.R  polyploids.R  popSummary.R  pullGeno.R  quickPop.R  runMacs.R  selection.R  tmp.R  writePlink.R  writeRecords.R  zzz.R
articles/: AlphaSimR.html  AlphaSimR.md  DataImport.html  GeneticRecombination.html  GeneticRecombination.md  Genome.html  Genome.md  GenomicSelection.html  Meiosis.html  Misc.html  QuantGen.html  Traits.html  index.html  index.md  intro.html  traits.html  traits.md
data/: PopTwo.RData
docs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml
drafts/: gs.Rmd  meiosis.Rmd  recombination.Rmd
inst/: CITATION  REFERENCES.bib
man/: AlphaSimR-package.Rd  AlphaSimR.Rd  GCAsol-class.Rd  HybridPop-class.Rd  InitialHaplo-class.Rd  LociMap-class.Rd  MaCS.Rd  MapPop-class.Rd  MegaPop-class.Rd  MultiPop-class.Rd  NamedMapPop-class.Rd  PedPop-class.Rd  Pedigree-class.Rd  PhenoPop-class.Rd  Pop-class.Rd  PopTwo.Rd  RRBLUP.Rd  RRBLUP2.Rd  RRBLUPMemUse.Rd  RRBLUP_D.Rd  RRBLUP_D2.Rd  RRBLUP_GCA.Rd  RRBLUP_GCA2.Rd  RRBLUP_SCA.Rd  RRBLUP_SCA2.Rd  RRBLUPsolution-class.Rd  RRDsol-class.Rd  RRsol-class.Rd  RawPop-class.Rd  SCAsol-class.Rd  SC_GBLUP.Rd  SimParam-class.Rd  SimParam.Rd  SimParam_addSnpChip.Rd  SimParam_addStructuredSnpChips.Rd  SimParam_addTraitA.Rd  SimParam_addTraitAD.Rd  SimParam_addTraitADE.Rd  SimParam_addTraitADEG.Rd  SimParam_addTraitADG.Rd  (+215 more)
news/: index.html  index.md
reference/: AlphaSimR-package.html  AlphaSimR-package.md  AlphaSimR.html  HybridPop-class.html  HybridPop-class.md  LociMap-class.html  LociMap-class.md  MapPop-class.html  MapPop-class.md  MegaPop-class.html  MultiPop-class.html  MultiPop-class.md  NamedMapPop-class.html  NamedMapPop-class.md  Pop-class.html  Pop-class.md  RRBLUP.html  RRBLUP.md  RRBLUP2.html  RRBLUP2.md  RRBLUPMemUse.html  RRBLUPMemUse.md  RRBLUP_D.html  RRBLUP_D.md  RRBLUP_D2.html  RRBLUP_D2.md  RRBLUP_GCA.html  RRBLUP_GCA.md  RRBLUP_GCA2.html  RRBLUP_GCA2.md  RRBLUP_SCA.html  RRBLUP_SCA.md  RRBLUP_SCA2.html  RRBLUP_SCA2.md  RRsol-class.html  RRsol-class.md  RawPop-class.html  RawPop-class.md  SimParam.html  SimParam.md  (+266 more)
revdep/: README.md
src/: AlphaFormatter.cpp  AlphaSimR_init.c  GEBV.cpp  (+36 more)
(+186 files in other folders)
